src/cards/mjordanCard/jordanCard.scss
@import url("https://fonts.googleapis.com/css2?family=Creepster&display=swap");

@mixin gradientText {
  background: var(--color_gradient);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

#mj-card-container {
  --color_white: #ffffff;
  --color_black: #000000;

  --color_dark: #180f30;
  --color_darkish: #382d57;
  --color_red: #df4957;
  --color_orange: #f68b21;
  --color_yellow: #f9f763;
  --color_green: #91dd21;
  --color_blue: #328ff3;
  --color_purple: #a229dd;
  --color_pink: #e54695;

  --color_rainbow-gradient: linear-gradient(
    -45deg,
    rgba(255, 159, 159, 1),
    rgba(251, 198, 133, 1),
    rgba(251, 241, 121, 1),
    rgba(169, 252, 126, 1),
    rgba(130, 240, 200, 1),
    rgba(149, 202, 228, 1),
    rgba(168, 168, 216, 1),
    rgba(203, 166, 200, 1),
    rgba(255, 159, 159, 1)
  );
  --color_bright-rainbow-gradient: linear-gradient(
    90deg,
    rgba(255, 000, 000, 1) 0%,
    rgba(255, 154, 000, 1) 20%,
    rgba(208, 222, 033, 1) 30%,
    rgba(079, 220, 074, 1) 40%,
    rgba(063, 218, 216, 1) 50%,
    rgba(047, 201, 226, 1) 60%,
    rgba(028, 127, 238, 1) 70%,
    rgba(095, 021, 242, 1) 80%,
    rgba(186, 012, 248, 1) 90%,
    rgba(251, 007, 217, 1) 100%
  );
  --color_mondrian-gradient: linear-gradient(
    90deg,
    red 0%,
    red 50%,
    blue 51%,
    blue 100%
  );

  color: var(--color_black);
  position: relative;
  .card {
    .card-details {
      text-align: right;
      display: flex;
      flex-direction: column;
      justify-content: space-around;
      align-items: stretch;
      h3 {
        border-bottom: 2px solid transparent;
      }
      span {
        font-weight: bold;
      }
      p,
      h3 {
        padding: 0 4px;
        margin: 0;
      }
    }
    &.mj-image {
      img {
        border-radius: 0;
        min-width: 150px;
        width: 150px;
        max-width: 150px;
      }
      svg {
        min-width: 150px;
      }
    }
  }

  .style-options {
    border-top: 3px solid;
    padding: 10px 0 0;
    margin-top: 20px;
    grid-column: 1 / -1;
    display: flex;
    justify-content: space-around;
    button {
      border: 1px solid;
      background: none;
      border-radius: 5px;
      &.current-style {
        border-width: 3px;
        font-weight: bold;
      }
      &:not(.current-style) {
        filter: grayscale(0.5);
      }
    }
  }

  #ghost-friend {
    display: none;
  }

  // --------------------------------------------------------------------
  // RAINBOW STYLE
  // --------------------------------------------------------------------
  &.card-style-rainbow {
    --color_gradient: var(--color_bright-rainbow-gradient);
    background: var(--color_rainbow-gradient);
    background-size: 400% 400%;
    animation: gradient 5s ease infinite;
    .card {
      .card-details {
        background: var(--color_white);
        h3 {
          border-bottom-color: var(--color_blue);
          @include gradientText;
        }
        a {
          color: var(--color_black);
          &:hover {
            text-decoration: none;
            color: var(--color_blue);
          }
        }
        span {
          @include gradientText;
        }
      }
    }
    .style-options {
      button {
        background: white;
        border-color: var(--color_blue);
        span {
          --color_gradient: var(--color_bright-rainbow-gradient);
          @include gradientText;
        }
      }
    }
  }

  // --------------------------------------------------------------------
  // DARK MODE STYLE
  // --------------------------------------------------------------------
  &.card-style-dark {
    --color_dark: #333333;

    background: var(--color_dark);
    color: var(--color_white);
    .card {
      .card-details {
        a {
          color: var(--color_white);
        }
      }
      &.mj-image {
        img {
          filter: grayscale(1);
          border-radius: 50% 20%/10% 50%;
          border: 5px solid var(--color_white);
          outline: 10px dotted var(--color_white);
        }
      }
    }
    .style-options {
      button {
        background: var(--color_dark);
        color: var(--color_white);
        border-color: var(--color_white);
      }
    }
  }

  // --------------------------------------------------------------------
  // NEON STYLE
  // --------------------------------------------------------------------
  &.card-style-neon {
    background: var(--color_dark);
    background-image: linear-gradient(var(--color_darkish) 1px, transparent 1px),
      linear-gradient(to right, var(--color_darkish) 1px, transparent 1px);
    background-size: 15px 15px;

    .card {
      .card-details {
        h3 {
          color: var(--color_red);
          text-shadow: 0 0 10px var(--color_red);
        }
        p {
          color: var(--color_orange);
          span,
          span a {
            color: var(--color_yellow);
            text-shadow: 0 0 10px var(--color_yellow);
          }
        }
        .mj-links {
          p:nth-child(1) a {
            color: var(--color_green);
            text-shadow: 0 0 10px var(--color_green);
          }
          p:nth-child(2) a {
            color: var(--color_blue);
            text-shadow: 0 0 10px var(--color_blue);
          }
          p:nth-child(3) a {
            color: var(--color_purple);
            text-shadow: 0 0 10px var(--color_purple);
          }
        }
      }
      &.mj-image {
        filter: grayscale(1) brightness(200%);
        mix-blend-mode: difference;
        box-shadow: 0 0 20px var(--color_yellow);
      }
    }
    .style-options {
      border-top-color: var(--color_pink);
      button {
        color: var(--color_pink);
        border-color: var(--color_pink);
        background: var(--color_dark);
        box-shadow: inset 0 0 10px var(--color_pink);
      }
    }
  }

  // --------------------------------------------------------------------
  // SPOOKY STYLE
  // --------------------------------------------------------------------
  &.card-style-spooky {
    background: var(--color_black);
    color: var(--color_orange);
    .card {
      &.mj-image {
        filter: hue-rotate(90deg);
      }
      .card-details {
        h3 {
          font-family: "Creepster";
        }
        span a,
        span {
          color: var(--color_white);
        }
        a {
          color: var(--color_orange);
        }
      }
    }
    .style-options {
      button {
        background: var(--color_black);
        color: var(--color_orange);
        border-color: var(--color_orange);
      }
    }
    #ghost-friend {
      display: block;
      position: absolute;
      z-index: 999;
      animation: ghostDance 15s infinite alternate;
      opacity: 0.5;
    }
  }

  // --------------------------------------------------------------------
  // MONDRIAN STYLE
  // --------------------------------------------------------------------
  &.card-style-mondrian {
    --color_gradient: var(--color_mondrian-gradient);
    background: white;
    .card {
      &.mj-image {
        position: relative;
        border: 1px solid red;
        width: 150px;
        height: 150px;
        box-sizing: border-box;
        border: 2px solid black;
        img {
          position: absolute;
          top: -2px;
          left: -2px;
          mix-blend-mode: lighten;
          filter: grayscale(1);
        }
      }
      .card-details {
        h3 {
          @include gradientText;
          border-bottom: 5px solid yellow;
        }
        p span,
        p a {
          padding: 5px;
          background: black;
        }
        span {
          color: red;
          a {
            color: yellow;
          }
        }
        .mj-links {
          p:nth-child(1) a {
            color: blue;
          }
          p:nth-child(2) a {
            color: red;
          }
          p:nth-child(3) a {
            color: yellow;
          }
        }
      }
    }
    .style-options {
      border-top-color: blue;
      button {
        &:nth-child(1) {
          background: blue;
          color: white;
          border-color: yellow;
        }
        &:nth-child(2) {
          background: red;
          color: white;
          border-color: blue;
        }
        &:nth-child(3) {
          background: yellow;
          color: black;
          border-color: red;
        }
        &:nth-child(4) {
          background: blue;
          color: white;
          border-color: red;
        }
        &:nth-child(5) {
          background: red;
          color: white;
          border-color: yellow;
        }

        &:hover {
          &:not(.current-style) {
            filter: grayscale(0);
          }
        }
      }
    }
  }
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

@keyframes ghostDance {
  0% {
    right: 0;
    bottom: 0;
  }
  25% {
    right: 200px;
  }
  50% {
    right: 25px;
    bottom: 36.5%;
  }
  75% {
    right: 175px;
  }
  100% {
    right: 0;
    bottom: 75%;
  }
}

